Agregando frase acerca de que son los presupuestos abiertos

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -30,6 +30,11 @@
         {% endfor %}
       </div>
 </div><!-- /.carousel -->
+        <div class="row intro">
+            <div class="container text-center">
+                <div class="col-md-12">Los presupuestos municipales abiertos es una manera de como los ciudadanos pueden saber cómo sus Gobiernos Municipales utilizan los fondos del Municipio...</div>
+            </div>
+        </div>
 {% endblock %}
 {% block cajas_portada %}
     <section id="recuadros" style="margin-bottom: -60px;">
