--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -195,6 +195,7 @@
             <!-- maribel 20/07 ogm-tabla4-municipal -->
             {% if municipio %}
                 <div class="col-md-6">
+                {% descargar_excel "ogm8" %}
                 <h3>Ranquin de municipio de misma categoría municipal</h3>
                 <h4 class="text-info">Córdobas corrientes por habitante</h4>
                 <table class="table table-condensed">
