--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -203,6 +203,7 @@
             <!-- maribel 20/07 oim-tabla4-municipal -->
             {% if municipio %}
                 <div class="col-md-7">
+                	{% descargar_excel "oim8" %}
                     <h3>Ranquin de recaudación por habitante categoría municipal "{{ mi_clase.clasificacion }}"</h3>
                 <h4 class="text-info">Córdobas corrientes por habitante</h4>
                 <table class="table table-condensed">
