--- a/core/templates/ago.html
+++ b/core/templates/ago.html
@@ -7,6 +7,7 @@
 Autonomía para asumir el gasto corriente {{ municipio }} 
 {% endblock %}
 {% block main_content %}
+	{% descargar_excel "ago-all" %}
     <h2 class="titular">Autonomía para asumir el gasto corriente   {{ municipio }} {{ year }}</h2>
 
     {{ charts|load_charts:"chart" }}
@@ -55,6 +56,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
         <!-- maribel 30/07 aci-tabla1 nacional -->
         {% if not municipio %}
                 <div class="col-md-5">
+                	{% descargar_excel "ago1" %}
                     <h3>Autonomía para asumir el gasto corriente con ingresos corrientes propios </h2>
                     <h4 class="text-info">por categoría de Municipios</h4>
                     <table class="table table-condensed">
@@ -78,6 +80,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
         <!-- maribel 30/07 aci-tabla4-municipal -->
         {% if municipio %}
             <div class="col-md-5">
+            	{% descargar_excel "ago2" %}
                 <h3>Ahorro Corriente para Inversiones</h3>
                 <h4 class="text-info">por Municipios de Categoría "{{ mi_clase.clasificacion }}"</h4>
                 <table class="table table-condensed">
@@ -105,6 +108,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
 
         <!-- maribel 30/07- aci-tabla2 -->
         <div class="col-md-6">
+        	{% descargar_excel "ago3" %}
             <h3>Resultado presupuestario ingresos corrientes totales</h3>
             <h4>Millones de córdobas corrientes</h4>
             <table class="table table-condensed">                                       
@@ -137,6 +141,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
         <br clear="all" />
         <!-- maribel 30/07- aci-tabla3 -->
         <div class="col-md-6">
+        	{% descargar_excel "ago4" %}
             <h3>Resultado presupuestario gastos corrientes totales</h3>
             <h4>Millones de córdobas corrientes</h4>
             <table class="table table-condensed">                                       
@@ -169,6 +174,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
         <!-- /fin aci-tabla2 -->                                                      
       <div role="tabpanel" class="tab-pane fade" id="acimodificacion" aria-labelledby="acimodificacion-tab">
         <!-- maribel 30/07 aci-tabla4 -->
+        {% descargar_excel "ago5" %}
         <h3>Modificaciones al presupuesto - Ingresos corrientes propios</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
         <table class="table table-condensed">
@@ -212,6 +218,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
 
         <!-- /fin aci-tabla4 -->
         <!-- 30/07 aci-tabla5 -->
+        {% descargar_excel "ago6" %}
         <h3>Modificaciones al presupuesto - Gastos corrientes totales</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
         <table class="table table-condensed">
@@ -258,6 +265,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
       <div role="tabpanel" class="tab-pane fade" id="aciorigen" aria-labelledby="aciorigen-tab">
         <!--maribel 20/07 oim-tabla 7 -->
         <div class="col-md-6">
+        {% descargar_excel "ago7" %}
             <h3>Ejecución presupuestaria del ingreso corrientes propios</h3>
             <h4 class="text-info">Millones de córdobas corrientes</h4>
             <table class="table table-condensed">
@@ -287,6 +295,7 @@ Autonomía para asumir el gasto corriente {{ municipio }}
         <!-- /fin acitabla6 -->
         <!-- maribel 30/07 aci-tabla7 -->
         <div class="col-md-6">
+        	{% descargar_excel "ago8" %}
             <h3>Ejecución presupuestaria - Gasto corrientes totales</h3>
             <h4 class="text-info">Millones de córdobas corrientes</h4>
             <table class="table table-condensed">
