lista descarga para detalle de INGRESOS, GASTOS E INVERSION

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -73,6 +73,7 @@
                     <li><a href="{%url 'ahorro_corriente'%}">Ahorro corriente para inversiones</a></li>
                     <li><a href="{%url 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</a></li>
                     <li><a href="{%url 'inversion_categoria'%}">Inversiones</a></li>
+                    <li><a href="{%url 'detalle_presupuesto'%}">Descargar Detalle Presupuesto</a></li>
                   </ul>
                 </li>
                 <li><a href="/core/plan-de-inversion/?inversion__anio=2015&inversion__municipio=1">PLANES DE INVERSIÓN</a></li>
