conservando variable municipio en select

--- a/core/templates/aci.html
+++ b/core/templates/aci.html
@@ -19,8 +19,8 @@ Ahorro corriente de inversion  {{ municipio }}
     </select>
     <select name="municipio">
     <option value="">--</option>
-    {% for municipio in municipio_list %}
-        <option {% if municipio.slug == request.GET.municipio %}selected{% endif %} value="{{municipio.slug}}">{{municipio}}</option>
+    {% for amunicipio in municipio_list %}
+        <option {% if amunicipio.slug == municipio.slug %}selected{% endif %} value="{{amunicipio.slug}}">{{amunicipio}}</option>
     {% endfor %}
     </select>
     <input type="submit" value="Submit"/>
