--- a/core/templates/chart.html
+++ b/core/templates/chart.html
@@ -11,8 +11,8 @@
     </select>
     <select name="municipio">
     <option value="">--</option>
-    {% for municipio in municipio_list %}
-        <option value="{{municipio.slug}}">{{municipio}}</option>
+    {% for amunicipio in municipio_list %}
+        <option value="{{amunicipio.slug}}">{{amunicipio}}</option>
     {% endfor %}
     </select>
     <input type="submit" value="Submit"/>
