--- a/core/templates/funcionamiento.html
+++ b/core/templates/funcionamiento.html
@@ -41,7 +41,7 @@
     {% endfor %}
     </select>
     <select name="municipio">
-    <option value="">--</option>
+    <option value="">Consolidado Municipal</option>
     {% for amunicipio in municipio_list %}
         <option {% if amunicipio.slug == municipio.slug %}selected{% endif %} value="{{amunicipio.slug}}">{{amunicipio}}</option>
     {% endfor %}
