--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -123,10 +123,7 @@
         </div>
         {{ charts|load_charts:"oim_ejecutado, ogm_ejecutado, inversion, inversion_area, fuentes" }}
         <div class="col-md-4 col-sm-4">
-            <h2>&iquest;Cuánto ingresa?</h2>
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#oim-desc">
-             ?
-            </button>
+            <h2>&iquest;Cuánto ingresa <button type="button" class="btn btn-success btn-xs question" data-toggle="modal" data-target="#oim-desc"> </button></h2>
             <div id='oim_ejecutado'></div>
             <!-- OIM modal -->
             <div class="modal fade" id="oim-desc" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -147,10 +144,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-4">
-            <h2>&iquest;En qué se gasta?</h2>
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#ogm-desc">
-             ?
-            </button>
+            <h2>&iquest;En qué se gasta <button type="button" class="btn btn-success btn-xs question" data-toggle="modal" data-target="#ogm-desc"> </button></h2>
             <div id='ogm_ejecutado'></div>
             <!-- OGM modal -->
             <div class="modal fade" id="ogm-desc" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -161,7 +155,7 @@
                         <h4 class="modal-title" id="myModalLabel">{{ desc_ogm_chart.nombre }}</h4>
                       </div>
                       <div class="modal-body">
-                          {{ desc_ogm_chart.descripcion|linebreaks }}
+                          {{ desc_ogm_chart.descripcion|safe|linebreaks }}
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
@@ -171,10 +165,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-4">
-            <h2>&iquest;C&oacute;mo se financia?</h2>
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#inversion-fuentes-desc">
-             ?
-            </button>
+            <h2>&iquest;C&oacute;mo se financia? <button type="button" class="btn btn-success btn-xs question" data-toggle="modal" data-target="#inversion-fuentes-desc">  </button></h2>
             <div id='fuentes'></div>
             <!-- GF modal -->
             <div class="modal fade" id="inversion-fuentes-desc" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -185,7 +176,7 @@
                         <h4 class="modal-title" id="myModalLabel">{{ desc_invfuentes_chart.nombre }}</h4>
                       </div>
                       <div class="modal-body">
-                          {{ desc_invfuentes_chart.descripcion|linebreaks }}
+                          {{ desc_invfuentes_chart.descripcion|safe|linebreaks }}
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
@@ -201,7 +192,7 @@
         <div class="container">
             <div class="row">
                 <div class="text-center">
-                    <h2 class="titular" style="margin-bottom:40px;">Presupuesto Inversi&oacute;n Municipal 2015</h2>
+                    <h2 class="titular" style="margin-bottom:40px;">Inversi&oacute;n Municipal 2015</h2>
                     <!--FIXME: Una vez se cargue el ejecutado cambiar
                     Presupuesto por Ejecucion --!>
                 </div>
@@ -257,8 +248,7 @@
 		    <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3>Inversión mínima de los ingresos  corrientes por categoría de municipio
-                    <button type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#inversion-minima">
-                        ?
+                    <button type="button" class="btn btn-success btn-xs question" data-toggle="modal" data-target="#inversion-minima">
                     </button>
                     </h3>
                 </div>
@@ -276,7 +266,7 @@
                         <h4 class="modal-title" id="myModalLabel">{{ desc_inversionminima.nombre }}</h4>
                       </div>
                       <div class="modal-body">
-                          {{ desc_inversionminima.descripcion|linebreaks }}
+                          {{ desc_inversionminima.descripcion|safe|linebreaks }}
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
@@ -289,8 +279,8 @@
 		    <div class="panel panel-success">
 			    <div class="panel-heading">
                     <h3>Inversión mínima por sector priorizado
-                    <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#inversion-minima">
-                     ?
+                    <button type="button" class="btn btn-primary btn-xs question" data-toggle="modal" data-target="#inversion-minima">
+                    
                    </button>
                    </h3>    
                 </div>
@@ -308,7 +298,7 @@
                         <h4 class="modal-title" id="myModalLabel">{{ desc_inversionisector.nombre }}</h4>
                       </div>
                       <div class="modal-body">
-                          {{ desc_inversionisector.descripcion|linebreaks }}
+                          {{ desc_inversionisector.descripcion|safe|linebreaks }}
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
